--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,10 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@pages/*": ["./src/pages/*"],
+      "@common/*": ["./src/common/*"],
+      "@config/*": ["./src/config/*"],
     }
   }
 }
