--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.62.11",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
