--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "^5.62.11",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.17",
+    "@vvo/tzdb": "^6.178.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
