--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@tanstack/react-query": "^5.62.11",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.17",
+    "@types/luxon": "^3.7.1",
     "@vvo/tzdb": "^6.178.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,6 +40,7 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
+    "luxon": "^3.7.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
