--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-error-boundary": "^6.1.0",
     "react-hook-form": "^7.54.2",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^7.1.1",
